Bug 6025: Sqoop fails on the CDH stack for piwik benchmarking
Use input parameters, rather than output parameters. Translate whitespace delim characters to escape sequences for cpimport.bin